# connectors_integration_testing

./: .dockerignore  .env.example  .env.prod.example  .gitignore  AGENTS.md  CHANGES.md  Makefile  README.md  SETUP.md  TESTING.md  docker-compose.dev.yml  docker-compose.prod.yml  package.json  turbo.json
backend/: .env.example  .env.production  .env.production.example  Dockerfile  docker-compose.yml  ngrok.yml  pyproject.toml  requirements.txt  start.sh
backend/app/: __init__.py  main.py
backend/app/agents/: assistant.py  coordinator.py  understanding.py
backend/app/api/: analytics.py  assistant.py  conversations.py  events.py  oauth.py
backend/app/core/: config.py  database.py  security.py  slack_scopes.py  state_machine.py
backend/app/mcp/: client.py  tools.py
backend/app/models/: database.py
backend/app/services/: analytics.py  conversation_memory.py  event_ingestion.py
backend/auth/: .env.example  AGENTS.md  Dockerfile  README.md  package.json
backend/auth/src/: index.ts
backend/auth/src/lib/: auth-client.ts  auth.ts  email.ts
backend/auth/src/middleware/: auth.ts
backend/auth/src/routes/: auth.ts
backend/connectors/: .env.example  AGENTS.md  Dockerfile  README.md  package.json  tsconfig.json
backend/connectors/src/: main.ts
backend/connectors/src/lib/: encryption.ts  pkce.ts  (+2 more)
backend/db/: .env.example  AGENTS.md  README.md  package.json  tsconfig.json
backend/db/drizzle/: 0000_absurd_microbe.sql  0000_quick_trish_tilby.sql  0003_odd_guardian.sql
backend/db/src/: index.ts  schema.ts
backend/tests/: conftest.py  test_core.py
(+28 files in other folders)
